Adicionar controles discretos abaixo do canvas

--- a/index.html
+++ b/index.html
@@ -102,6 +102,35 @@
             </div>
         </div>
     </div>
+    
+    <!-- Controles do jogo (fora do canvas) -->
+    <div class="game-controls-info">
+        <div class="controls-section">
+            <div class="control-item">
+                <span class="control-key">W A S D</span>
+                <span class="control-desc">Movimentação</span>
+            </div>
+            <div class="control-item">
+                <span class="control-key">Mouse</span>
+                <span class="control-desc">Mirar</span>
+            </div>
+            <div class="control-item">
+                <span class="control-key">Clique</span>
+                <span class="control-desc">Atirar</span>
+            </div>
+        </div>
+        <div class="controls-section">
+            <div class="control-item">
+                <span class="control-key">I</span>
+                <span class="control-desc">Informações</span>
+            </div>
+            <div class="control-item">
+                <span class="control-key">M</span>
+                <span class="control-desc">Abrir Mapa</span>
+            </div>
+        </div>
+    </div>
+    
     <script type="module" src="js/main.js"></script>
 </body>
 </html> 
